--- a/app/src/main/res/layout/activity_recognition.xml
+++ b/app/src/main/res/layout/activity_recognition.xml
@@ -11,21 +11,88 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginBottom="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/cameracard"
+        app:layout_constraintBottom_toTopOf="@+id/recognitionResultsLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
 
+    <!-- Collapsible layout for recognition results -->
+    <LinearLayout
+        android:id="@+id/recognitionResultsLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@id/imageView2"
+        app:layout_constraintBottom_toTopOf="@id/gallerycard"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp">
+
+        <!-- Default instructional text -->
+        <TextView
+            android:id="@+id/instructionText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Choose an image from the gallery or take a picture using the camera to see who you resemble the most! The results will be displayed here."
+            android:textSize="16sp"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:padding="8dp" />
+
+        <!-- Result text hidden by default -->
+        <TextView
+            android:id="@+id/recognitionTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="You look like:"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/recognition1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1. Person1 90%"
+            android:textSize="16sp"
+            android:layout_marginTop="4dp"
+            android:textColor="@color/black"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/recognition2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2. Person2 80%"
+            android:textSize="16sp"
+            android:layout_marginTop="4dp"
+            android:textColor="@color/black"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/recognition3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="3. Person3 70%"
+            android:textSize="16sp"
+            android:layout_marginTop="4dp"
+            android:textColor="@color/black"
+            android:visibility="gone" />
+
+    </LinearLayout>
+
     <androidx.cardview.widget.CardView
         android:id="@+id/gallerycard"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginBottom="60dp"
-        app:cardCornerRadius="60dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="40dp"
+        app:cardCornerRadius="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/cameracard"
         app:layout_constraintHorizontal_bias="0.5"
@@ -33,18 +100,18 @@
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="50dp"
-            android:layout_height="57dp"
+            android:layout_width="40dp"
+            android:layout_height="47dp"
             android:layout_gravity="center"
             app:srcCompat="@drawable/ic_baseline_image_24" />
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cameracard"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginBottom="60dp"
-        app:cardCornerRadius="60dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="40dp"
+        app:cardCornerRadius="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -52,9 +119,10 @@
 
         <ImageView
             android:id="@+id/imageView4"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             app:srcCompat="@drawable/ic_baseline_camera_24" />
     </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
