--- a/app/src/main/res/layout/activity_recognition.xml
+++ b/app/src/main/res/layout/activity_recognition.xml
@@ -13,80 +13,86 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/recognitionResultsLayout"
+        app:layout_constraintBottom_toTopOf="@+id/recognitionResultsCard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
 
-    <!-- Collapsible layout for recognition results -->
-    <LinearLayout
-        android:id="@+id/recognitionResultsLayout"
+    <!-- Recognition Results Section in a Card -->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/recognitionResultsCard"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="4dp"
         app:layout_constraintTop_toBottomOf="@id/imageView2"
         app:layout_constraintBottom_toTopOf="@id/gallerycard"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"
+        android:layout_margin="16dp">
 
-        android:layout_marginBottom="16dp">
-
-        <!-- Default instructional text -->
-        <TextView
-            android:id="@+id/instructionText"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/recognitionResultsLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Choose an image from the gallery or take a picture using the camera to see who you resemble the most! The results will be displayed here."
-            android:textSize="16sp"
-            android:textAlignment="center"
-            android:textColor="@color/text_primary"
-            android:padding="8dp" />
+            android:orientation="vertical"
+            android:padding="16dp">
 
-        <!-- Result text hidden by default -->
-        <TextView
-            android:id="@+id/recognitionTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="You look like:"
-            android:textStyle="bold"
-            android:textSize="18sp"
-            android:textColor="@color/text_primary"
-            android:visibility="gone" />
+            <!-- Default instructional text -->
+            <TextView
+                android:id="@+id/instructionText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Choose an image from the gallery or take a picture using the camera to see who you resemble the most! The results will be displayed here."
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:textColor="@color/text_primary"
+                android:padding="8dp" />
 
-        <TextView
-            android:id="@+id/recognition1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="1. Person1 90%"
-            android:textSize="16sp"
-            android:layout_marginTop="4dp"
-            android:textColor="@color/text_primary"
-            android:visibility="gone" />
+            <!-- Result text hidden by default -->
+            <TextView
+                android:id="@+id/recognitionTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="You look like:"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:textColor="@color/text_primary"
+                android:visibility="gone" />
 
-        <TextView
-            android:id="@+id/recognition2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2. Person2 80%"
-            android:textSize="16sp"
-            android:layout_marginTop="4dp"
-            android:textColor="@color/text_primary"
-            android:visibility="gone" />
+            <TextView
+                android:id="@+id/recognition1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1. Person1 90%"
+                android:textSize="16sp"
+                android:layout_marginTop="4dp"
+                android:textColor="@color/text_primary"
+                android:visibility="gone" />
 
-        <TextView
-            android:id="@+id/recognition3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="3. Person3 70%"
-            android:textSize="16sp"
-            android:layout_marginTop="4dp"
-            android:textColor="@color/text_primary"
-            android:visibility="gone" />
+            <TextView
+                android:id="@+id/recognition2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2. Person2 80%"
+                android:textSize="16sp"
+                android:layout_marginTop="4dp"
+                android:textColor="@color/text_primary"
+                android:visibility="gone" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/recognition3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="3. Person3 70%"
+                android:textSize="16sp"
+                android:layout_marginTop="4dp"
+                android:textColor="@color/text_primary"
+                android:visibility="gone" />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/gallerycard"
