--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".RegisterActivity">
 
+    <!-- Logo at the top -->
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="0dp"
@@ -14,12 +15,43 @@
         android:layout_marginTop="60dp"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/cameracard"
+        app:layout_constraintBottom_toTopOf="@+id/instructionCard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
 
+    <!-- Instruction Card -->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/instructionCard"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="4dp"
+        app:layout_constraintTop_toBottomOf="@id/imageView2"
+        app:layout_constraintBottom_toTopOf="@+id/gallerycard"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp">
+
+            <TextView
+                android:id="@+id/instructionText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Choose an image of a person you want to register from gallery or take a picture of them!"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:textColor="@color/text_primary" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <!-- Gallery Button -->
     <androidx.cardview.widget.CardView
         android:id="@+id/gallerycard"
         android:layout_width="120dp"
@@ -39,6 +71,7 @@
             app:srcCompat="@drawable/ic_baseline_image_24" />
     </androidx.cardview.widget.CardView>
 
+    <!-- Camera Button -->
     <androidx.cardview.widget.CardView
         android:id="@+id/cameracard"
         android:layout_width="120dp"
@@ -57,4 +90,5 @@
             android:layout_gravity="center"
             app:srcCompat="@drawable/ic_baseline_camera_24" />
     </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
