--- a/app/src/main/res/layout/activity_recognition.xml
+++ b/app/src/main/res/layout/activity_recognition.xml
@@ -48,7 +48,20 @@
                 android:textSize="16sp"
                 android:textAlignment="center"
                 android:textColor="@color/text_primary"
-                android:padding="8dp" />
+                android:padding="8dp"
+                />
+
+            <!-- No face detected text -->
+            <TextView
+                android:id="@+id/noFaceText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="No face detected on the provided image."
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:textColor="@color/text_primary"
+                android:padding="8dp"
+                android:visibility="gone" />
 
             <!-- Result text hidden by default -->
             <TextView
@@ -65,7 +78,7 @@
                 android:id="@+id/recognition1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1. Person1 90%"
+                android:text="1."
                 android:textSize="16sp"
                 android:layout_marginTop="4dp"
                 android:textColor="@color/text_primary"
@@ -75,7 +88,7 @@
                 android:id="@+id/recognition2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="2. Person2 80%"
+                android:text="2."
                 android:textSize="16sp"
                 android:layout_marginTop="4dp"
                 android:textColor="@color/text_primary"
@@ -85,7 +98,7 @@
                 android:id="@+id/recognition3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="3. Person3 70%"
+                android:text="3."
                 android:textSize="16sp"
                 android:layout_marginTop="4dp"
                 android:textColor="@color/text_primary"
