--- a/app/src/main/res/layout/activity_recognition.xml
+++ b/app/src/main/res/layout/activity_recognition.xml
@@ -51,6 +51,18 @@
                 android:padding="8dp"
                 />
 
+            <!-- Waiting for results text -->
+            <TextView
+                android:id="@+id/waitingResults"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Waiting for the results..."
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:textColor="@color/text_primary"
+                android:padding="8dp"
+                android:visibility="gone" />
+
             <!-- No face detected text -->
             <TextView
                 android:id="@+id/noFaceText"
